# python-oop-journey

./: .env.example  .env.production.example  .gitignore  AGENTS.md  AGENT_SELECTOR.md  AGENT_TESTING_PROMPT.txt  AUDIT_FRONTEND.md  AUDIT_MODELS.md  AUTH_SYSTEM.md  BOOTSTRAP.md  CLAW_CONFIGURATION_SUMMARY.md  CLAW_MIGRATION_SUMMARY.md  CLAW_REPO_SETUP_COMPLETE.md  CODING_STANDARDS.md  COMPLETE_TUTORIAL.md  CONFIDENTIALITY_REPORT.md  DEPLOYMENT_CHECKLIST.md  DEPLOY_NETLIFY.md  EXECUTION_PLAN.md  FREE_DEPLOYMENT_OPTIONS.md  FREE_DEPLOY_QUICKSTART.md  GITHUB_SETUP.md  GOOGLE_OAUTH_DETAILED.md  HEARTBEAT.md  IDENTITY.md  INTEGRATION_TEST_REPORT.md  KIMI_CLAW_SETUP_GUIDE.md  MIGRATION_TO_KIMI.md  MISTAKES.md  MONACO_INTEGRATION.md  Makefile  PHASE3_INTEGRATION_TEST_REPORT.md  PHASE5_INTEGRATION_TEST_REPORT.md  PRODUCTION.md  PROGRESS_PERSISTENCE_SUMMARY.md  PROJECT_AUDIT_REPORT.md  PROJECT_FINAL_STATUS.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  (+25 more)
python-oop-journey-v2/: .gitignore  AGENTS.md  BUSINESS_STRATEGY_ANALYSIS.md  DATA_ENGINEERING_COURSE_OUTLINE.md  EXPANSION_STRATEGY_ANALYSIS.md  FINAL_VERIFICATION_REPORT.md  INDEX.md  POLISH_REPORT_ROOTSYNC.md  POLISH_REPORT_ROOTSYNC_W04-05.md  POLISH_REPORT_ROOTSYNC_W06-08.md  QUICKSTART.md  README.md  ROADMAP.md  VERIFICATION_REPORT_POLISH_1-2.md  VERIFICATION_REPORT_POLISH_3-4.md  VERIFICATION_REPORT_POLISH_5-7.md  VERIFICATION_REPORT_PROJECTS.md  VERIFICATION_REPORT_ROOT.md  VERIFICATION_REPORT_STRUCTURE.md  VERIFICATION_REPORT_TESTS.md  WEB_DEVELOPMENT_COURSE_OUTLINE.md  memory.md  pyproject.toml  pytest.ini  requirements.txt  tasks.json
python-oop-journey-v2/week00_getting_started/: POLISH_REPORT.md  POLISH_REPORT_DAYS16-30.md  POLISH_REPORT_EXERCISES.md  POLISH_REPORT_TESTS.md  README.md  __init__.py  day00_welcome.md  day01_installing_python.md  day02_environment_setup.md  day03_first_program.md  day04_variables.md  day05_basic_types.md  day06_input_output.md  day07_operators.md  day08_boolean_logic.md  day09_if_statements.md  (+17 more)
(+2208 files in other folders)
